[build-system]
requires = ["hatchling", "versioningit", "pyyaml"]
build-backend = "hatchling.build"

[project]
name = "ua-parser-builtins"
description = "Precompiled rules for User Agent Parser"
readme = "README.md"
dependencies = ["ua-parser"]
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
urls = {repository = "https://github.com/ua-parser/uap-python"}
dynamic = ["version"]
maintainers = [
    { name = "masklinn", email = "uap@masklinn.net" }
]

classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        # "Programming Language :: Python :: Implementation :: GraalPy",
]

[tool.hatch.build.hooks.custom]

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.sdist]
artifacts = [
    "uap-core/regexes.yaml",
]
